--- a/ui/qVoxFallDialog.ui
+++ b/ui/qVoxFallDialog.ui
@@ -98,7 +98,7 @@
          </widget>
         </item>
 		<item row="0" column="2">
-		 <widget class="QLabel" name="label">
+		 <widget class="QLabel" name="label_1">
 		  <property name="sizePolicy">
 		   <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
 			<horstretch>0</horstretch>
@@ -140,7 +140,7 @@
          </widget>
         </item>
 		<item row="1" column="2">
-		 <widget class="QLabel" name="label">
+		 <widget class="QLabel" name="label_3">
 		  <property name="sizePolicy">
 		   <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
 			<horstretch>0</horstretch>
