--- a/ui/qVoxFallDialog.ui
+++ b/ui/qVoxFallDialog.ui
@@ -77,7 +77,7 @@
 		   </sizepolicy>
 		  </property>
 		  <property name="text">
-		   <string>Voxel size</string>
+		   <string>Voxel size (m)</string>
 		  </property>
 		 </widget>
 		</item>
@@ -97,20 +97,43 @@
           </property>
          </widget>
         </item>
-		<item row="0" column="2">
-		 <widget class="QLabel" name="label_1">
-		  <property name="sizePolicy">
-		   <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-			<horstretch>0</horstretch>
-			<verstretch>0</verstretch>
-		   </sizepolicy>
-		  </property>
+		<item row="1" column="0">
+         <widget class="QLabel" name="label_1">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Dip (deg)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QDoubleSpinBox" name="dipDoubleSpinBox">
+          <property name="decimals">
+           <number>0</number>
+          </property>
+          <property name="minimum">
+           <double>0.0</double>
+          </property>
+          <property name="maximum">
+           <double>90.0</double>
+          </property>
+          <property name="value">
+           <double>0.0</double>
+          </property>
+         </widget>
+        </item>
+		<item row="1" column="4">
+		 <widget class="QToolButton" name="autoFitPlaneButton">
 		  <property name="text">
-		   <string>(Limit of Detection 95%)</string>
+		   <string notr="true">Auto</string>
 		  </property>
-		 </widget>			
+		 </widget>
 		</item>
-        <item row="1" column="0">
+        <item row="1" column="2">
          <widget class="QLabel" name="label_2">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -119,11 +142,11 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Azimuth (deg)</string>
+           <string>/ Dip direction (deg)</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="1" column="3">
          <widget class="QDoubleSpinBox" name="azDoubleSpinBox">
           <property name="decimals">
            <number>0</number>
@@ -139,26 +162,6 @@
           </property>
          </widget>
         </item>
-		<item row="1" column="2">
-		 <widget class="QLabel" name="label_3">
-		  <property name="sizePolicy">
-		   <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
-			<horstretch>0</horstretch>
-			<verstretch>0</verstretch>
-		   </sizepolicy>
-		  </property>
-		  <property name="text">
-		   <string>(Slope's dip direction)</string>
-		  </property>
-		 </widget>
-		</item>
-		<item row="1" column="5">
-		 <widget class="QToolButton" name="autoAzimuthButton">
-		  <property name="text">
-		   <string notr="true">Auto</string>
-		  </property>
-		 </widget>
-		</item>
        </layout>
       </widget>
      </item>
@@ -181,7 +184,7 @@
 		<item row="0" column="1">
 		 <widget class="QLineEdit" name="destinationPathLineEdit"/>
 		</item>
-		<item row="0" column="5">
+		<item row="0" column="4">
          <widget class="QToolButton" name="browseToolButton">
           <property name="text">
            <string notr="true">...</string>
@@ -237,7 +240,7 @@
   <tabstop>swapMeshesToolButton</tabstop>
   <tabstop>voxelSizeDoubleSpinBox</tabstop>
   <tabstop>azDoubleSpinBox</tabstop>
-  <tabstop>autoAzimuthButton</tabstop>
+  <tabstop>autoFitPlaneButton</tabstop>
   <tabstop>generateReportBox</tabstop>
   <tabstop>exportCheckBox</tabstop>
   <tabstop>lossCheckBox</tabstop>
